# JustAnotherCodeEditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  app_ms.rc
.buildtools/cmake/: app.cmake
.buildtools/cmake/platform/: linux.cmake  windows.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  miscellaneous.md
_plugins/: README.md
assets/locales/: english.local
buildtools/cmake/: app.cmake
buildtools/cmake/platform/: windows.cmake  x11.cmake
docs/: CONTRIBUTING.md  README.md
include/JACE/: setup.h
include/JACE/_UI/: WindowCreation.h  WindowManager.h  sessionManager.h  themeManager.h
include/JACE/_linux/: linux-wl.h  linux-x11.h
include/JACE/_win/: resources.h  win32.h  winUI.h
include/JACE/common/: fileHandeler.h  global.h  localesHandeler.h  logHandeler.h  sessionManager.h
include/JACE/plugins/: PluginLoader.h  pluginInterface.h  pluginManager.h
src/: app.cpp  setup.cpp
src/_UI/: WindowCreation.cpp  WindowManager.cpp  sessionManager.cpp  themeManager.cpp
src/_linux/: linux-wl.cpp  linux-x11.cpp
src/_windows/: win32.cpp  winUI.cpp
src/common/: fileHandeler.cpp  global.cpp  localesHandeler.cpp  logHandeler.cpp  sessionManager.cpp
src/plugins/: PluginLoader.cpp  pluginManager.cpp
